# smarty-steps-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py
app/api/: auth.py  curriculum.py  deps.py  leaderboard.py  learners.py  parent.py  progress.py  quizzes.py
app/clients/: claude_client.py  cognito.py  standards_api.py
app/core/: config.py  constants.py  enums.py  exceptions.py
app/daos/: dashboard_dao.py  leaderboard_dao.py  learner_dao.py  lesson_dao.py  parent_dao.py  progress_dao.py
app/db/: models.py  session.py
app/schemas/: auth.py  curriculum.py  dashboard.py  leaderboard.py  learner.py  parent.py  progress.py  quiz.py
app/services/: auth_service.py  content_service.py  curriculum_service.py  dashboard_service.py  grading.py  leaderboard_service.py  learner_service.py  lesson_service.py  parent_service.py  progress_service.py  quiz_service.py
docs/superpowers/plans/: 2026-04-27-phase1-foundation.md  2026-04-28-phase2-learners.md  (+3 more)
scripts/: dev-db.sh
tests/: conftest.py  test_config.py
tests/api/: test_auth.py  test_curriculum.py  test_health.py  test_leaderboard.py  test_learners.py  test_parent.py  test_parent_dashboard.py  test_progress.py  test_quizzes.py
tests/daos/: test_dashboard_dao.py  test_leaderboard_dao.py  test_learner_dao.py  test_lesson_dao.py  test_parent_dao.py  test_progress_dao.py
tests/services/: test_content_service.py  test_curriculum_service.py  test_dashboard_service.py  test_grading.py  test_leaderboard_service.py  test_learner_service.py  test_lesson_service.py  test_parent_service.py  test_progress_service.py  test_quiz_service.py
(+1 files in other folders)
