[tool.poetry]
name = "smarty-steps-backend"
version = "0.1.0"
description = "Smarty Steps learning app backend"
authors = ["Joash Owusu-Ansah"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
pydantic-settings = "^2.3.0"
bcrypt = "^4.1.0"
httpx = "^0.27.0"
anthropic = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
boto3 = "^1.34.0"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
anyio = {extras = ["trio"], version = "^4.4.0"}
testcontainers = {extras = ["postgres"], version = "^4.8.0"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
